# claude-lsp-cli

./: .c8rc.json  .env.example  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  CLAUDE_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  HOOK_DOCUMENTATION.md  LANGUAGE_STATUS.md  LICENSE  LSP-DIAGNOSTICS.md  PYTHON_FINAL_ANALYSIS.md  PYTHON_ISSUES.md  README.md  SCALA_ISSUES.md  SECURITY_FIXES.md  TESTING.md  benchmark-results-1757653617373.json  check-languages.ts  debug-metals.ts  docker-compose.yml  eslint.config.js  index.ts  install-binary.sh  install-claude-hook.sh  install-one-liner.sh  install.ps1  install.sh  output2.txt  package.json  performance-baseline.json  performance-report.md  run-tests.sh  test-all-languages.ts  test-all-working.ts  test-debug-startup.ts  test-hook-timing.txt  test-import.mjs  (+15 more)
.github/: dependabot.yml
docs/: HOOK_TIMEOUT_BEHAVIOR.md  LANGUAGE_SUPPORT.md  PERFORMANCE.md
examples/: basic-usage.ts
examples/cpp-project/: .gitignore  CMakeLists.txt
examples/cpp-project/include/: User.h
examples/cpp-project/src/: Database.h  User.cpp  User.h  main.cpp
hooks/: lsp-diagnostics.ts  lsp-slash-command.ts
scala-test/: Test.scala  build.sbt
scripts/: benchmark.ts  monitor-python-lsp.sh  performance-monitor.ts
src/: cli-diagnostics-direct.ts  cli-diagnostics.ts  cli-file.ts  cli-hooks.ts  cli-lsp-installer.ts  cli-server-manager-global.ts  cli-server-manager.ts  cli.ts  constants.ts  diagnostic-capabilities.ts  diagnostic-request-manager.ts  diagnostic-worker.ts  diagnostics.ts  direct-checker.ts  file-checker-dedup.ts  hook-file.ts  (+17 more)
(+199 files in other folders)
